# relay_builder

./: .dockerignore  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTEXT.md  Cargo.toml  DOCKER_README.md  Dockerfile  Dockerfile.benchmark  Dockerfile.benchmark.reuseport  Dockerfile.benchmark.reuseport.mimalloc  Dockerfile.benchmark.single  Dockerfile.parent  README.md  agent.json  clippy.toml  docker-build.sh  docker-compose.yml  sonar-project.properties  stack.json  test_channel_size.rs  test_diagnostics.sh  test_diagnostics_relay.sh  test_logging.sh
.claude/: settings.local.json
.github/workflows/: build.yml  ci.yml  docker.yml
.specify/memory/: constitution.md
benches/: channel_performance.rs  event_ingester_bench.rs
docs/: CUSTOM_MIDDLEWARE.md  middleware_guide.md
examples/: 01_minimal_relay.rs  01_minimal_relay_reuseport.rs  01_minimal_relay_reuseport_mimalloc.rs  01_minimal_relay_single.rs  02_bare_mode.rs  02_event_processing.rs  03_protocol_features.rs  03_spam_filter.rs  04_advanced_state.rs  04_auth_relay.rs  05_custom_middleware.rs  05_protocol_features.rs  06_production.rs  06_rate_limiter.rs  07_rate_limiting.rs  07_user_sessions.rs  07_with_diagnostics.rs  08_multi_tenant.rs  08_reuseport_cpu_pinning.rs  09_production.rs  README.md  advanced_relay.rs  bare_relay.rs  channel_comparison.rs  configurable_relay.rs  custom_middleware.rs  custom_state_relay.rs  minimal_relay.rs  private_relay.rs  production_relay.rs  subdomain_relay.rs
examples/common/: mod.rs
examples/data/relay_with_diagnostics/: data.mdb  lock.mdb
scripts/: setup-hooks.sh  test_subscription_indexes.sh
src/: config.rs  cpu_affinity.rs  crypto_helper.rs  crypto_worker.rs  database.rs  diagnostics.rs  error.rs  event_ingester.rs  event_processor.rs  global_config.rs  global_metrics.rs  handlers.rs  lib.rs  message_converter.rs  metrics.rs  middleware.rs  middleware_chain.rs  nostr_handler.rs  nostr_middleware.rs  relay_builder.rs  relay_middleware.rs  state.rs  subdomain.rs  subscription_coordinator.rs  subscription_index.rs  subscription_registry.rs  subscription_service.rs  test_channel_overflow.rs  test_middleware_system.rs  test_simple_middleware.rs  test_utils.rs  utils.rs
src/middlewares/: error_handling.rs  event_verifier.rs  logger.rs  metrics.rs  mod.rs  nip09_deletion.rs  nip40_expiration.rs  nip42_auth.rs  nip70_protected.rs  rate_limit.rs
src/util/: either.rs  mod.rs
src/websocket/: axum_integration.rs  connection.rs  handler.rs  mod.rs
tests/: auth_integration_test.rs  crypto_performance_test.rs  either_middleware_test.rs  error_handling_integration.rs  error_handling_middleware_chain_test.rs  hybrid_cleanup_test.rs  logic_integration.rs  middleware_integration.rs  on_connect_test.rs  outbound_middleware.rs  relay_builder_integration.rs  subscription_index_test.rs
