[package]
name = "nostr_relay_builder"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Cadenas <daniel@nos.social>"]
description = "A framework for building custom Nostr relays with pluggable business logic and middleware support"
license = "MIT"
repository = "https://github.com/nostrosocial/nostr_relay_builder"
keywords = ["nostr", "relay", "websocket", "middleware"]
categories = ["network-programming", "web-programming::websocket"]
readme = "README.md"

[features]
default = []
axum = ["dep:axum", "axum-server", "tower-http", "tower"]

[dependencies]
websocket_builder = { path = "../websocket_builder" }
nostr-sdk = { git = "https://github.com/verse-pbc/nostr", features = ["all-nips"] }
nostr = { git = "https://github.com/verse-pbc/nostr", features = ["std"] }
nostr-database = { git = "https://github.com/verse-pbc/nostr" }
nostr-lmdb = { git = "https://github.com/verse-pbc/nostr" }
tokio = { version = "1.45", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["rt"] }
tracing = "0.1"
tracing-futures = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = { version = "1.0.89", features = ["backtrace"] }
snafu = { version = "0.8", features = ["backtrace"] }
async-trait = "0.1.82"
futures-util = "0.3.31"
rand = "0.8.5"
uuid = { version = "1.11", features = ["v4"] }
once_cell = "1.20"
flume = "0.11.1"
rustls = { version = "0.23", features = ["ring"] }
chrono = "0.4"

# Optional dependencies for the built-in server
axum = { version = "0.7.9", features = ["ws", "http1"], optional = true }
axum-server = { version = "0.6", optional = true }
tower-http = { version = "0.6.2", features = ["trace", "cors", "fs"], optional = true }
tower = { version = "0.4.13", features = ["util"], optional = true }

[dev-dependencies]
tempfile = "3.10"
criterion = { version = "0.5", features = ["async_tokio"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
parking_lot = "0.12"
# For server examples
axum = { version = "0.7.9", features = ["ws", "http1"] }
axum-server = "0.6"
tower-http = { version = "0.6.2", features = ["cors", "fs"] }

[[example]]
name = "minimal_relay"
required-features = ["axum"]

[[example]]
name = "advanced_relay"
required-features = ["axum"]

[[example]]
name = "private_relay"
required-features = ["axum"]

[[example]]
name = "subdomain_relay"
required-features = ["axum"]

[[example]]
name = "custom_middleware"

[[example]]
name = "custom_state_relay"
required-features = ["axum"]

[[example]]
name = "production_relay"
required-features = ["axum"]