[package]
name = "relay_builder"
version = "0.5.0-alpha.1"
edition = "2021"
authors = ["Daniel Cadenas <dcadenas@gmail.com>"]
description = "A framework for building custom Nostr relays with pluggable business logic and middleware support"
license = "MIT"
repository = "https://github.com/verse-pbc/relay_builder"
keywords = ["nostr", "relay", "websocket", "middleware"]
categories = ["network-programming", "web-programming::websocket"]
readme = "README.md"
exclude = ["assets/", "*.json", ".github/"]

[features]
default = []
axum = []  # Feature flag exists for compatibility but axum is always included

[dependencies]
websocket_builder = { git = "https://github.com/verse-pbc/websocket_builder" }
nostr-sdk = { git = "https://github.com/verse-pbc/nostr", features = ["all-nips"] }
nostr = { git = "https://github.com/verse-pbc/nostr", features = ["std"] }
nostr-database = { git = "https://github.com/verse-pbc/nostr" }
nostr-lmdb = { git = "https://github.com/verse-pbc/nostr" }
tokio = { version = "1.45", features = ["full", "tracing"] }
tokio-util = { version = "0.7.12", features = ["rt"] }
tracing = "0.1"
tracing-futures = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = { version = "1.0.89", features = ["backtrace"] }
snafu = { version = "0.8", features = ["backtrace"] }
async-trait = "0.1.82"
futures-util = "0.3.31"
rand = "0.8.5"
uuid = { version = "1.11", features = ["v4"] }
once_cell = "1.20"
flume = "0.11.1"
rustls = { version = "0.23", features = ["ring"] }
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
dashmap = "6.1"
indicatif = "0.17"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
parking_lot = "0.12"
rayon = "1.10"
num_cpus = "1.16"
negentropy = { version = "0.5", features = ["std"] }
hex = "0.4.3"
heed = { version = "0.20", default-features = false, features = ["read-txn-no-tls"] }
twox-hash = "1.6"
thiserror = "2.0"

# Dependencies for the built-in server
axum = { version = "0.8", features = ["ws", "http1"] }
axum-server = { version = "0.6" }
tower-http = { version = "0.6.2", features = ["trace", "cors", "fs"] }
tower = { version = "0.4.13", features = ["util"] }

[dev-dependencies]
tempfile = "3.10"
criterion = { version = "0.5", features = ["async_tokio"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
# For server examples
axum = { version = "0.8", features = ["ws", "http1"] }
axum-server = "0.6"
tower-http = { version = "0.6.2", features = ["cors", "fs"] }
console-subscriber = "0.4"

[[example]]
name = "01_minimal_relay"

[[example]]
name = "02_event_processing"

[[example]]
name = "03_protocol_features"

[[example]]
name = "04_advanced_state"

[[example]]
name = "05_custom_middleware"

[[example]]
name = "06_production"


[[bin]]
name = "export_import"
path = "src/bin/export_import.rs"

[[bin]]
name = "negentropy_sync"
path = "src/bin/negentropy_sync.rs"

[[bin]]
name = "nostr-lmdb-dump"
path = "src/bin/nostr-lmdb-dump.rs"

[[bin]]
name = "nostr-lmdb-integrity"
path = "src/bin/nostr-lmdb-integrity.rs"

[[bench]]
name = "channel_performance"
harness = false

[[bench]]
name = "event_ingester_bench"
harness = false
